# omnibox-wizard

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  DEVELOPER.md  Dockerfile  README.md  compose.yaml  example.env  main.py  persistence.yaml  pyproject.toml  runtime.Dockerfile
.github/workflows/: build.yaml  ci.yaml
common/: config_loader.py  logger.py  trace_info.py  utils.py
helm/wizard/: Chart.yaml  values.yaml
helm/wizard-worker/: Chart.yaml  values.yaml
helm/wizard-worker/templates/: omnibox-wizard-worker.yaml
helm/wizard/templates/: omnibox-wizard.yaml
omnibox/common/: config_loader.py  logger.py  template_parser.py  trace_info.py
omnibox/wizard/api/: depends.py  entity.py  internal.py  server.py  v1.py  wizard.py
omnibox/wizard/grimoire/: base_streamable.py  common_ai.py
omnibox/wizard/wand/: worker.py
omnibox_wizard/: chunk_offsets.py  indexing.py
omnibox_wizard/common/: logger.py  telemetry.py  trace_info.py
omnibox_wizard/resources/prompt_templates/: ask.j2  chat_title.j2  citation_format.j2  html_title_extract.j2  meta_info.j2  tags_extract.j2  tools.j2  write.j2
omnibox_wizard/resources/prompts/: property.md  video_note_generation.md
omnibox_wizard/wizard/: config.py  entity.py
omnibox_wizard/wizard/api/: app_factory.py  depends.py  entity.py  internal.py  server.py  v1.py  wizard.py
omnibox_wizard/wizard/grimoire/: base_streamable.py  common_ai.py
omnibox_wizard/wizard/wand/: worker.py
omnibox_wizard/worker/: callback_util.py  config.py  entity.py  health_server.py  health_tracker.py  rate_limiter.py  task_manager.py  worker.py
omnibox_wizard/worker/agent/: base.py  chat_title_generator.py  html_content_extractor.py  html_tags_extractor.py  html_title_extractor.py
omnibox_wizard/worker/functions/: base_function.py  collect_url.py  file_reader.py  html_reader.py  index.py  property_generator.py  subtitle_aligner.py  tag_extract.py  tag_extractor.py  title_generator.py  video_note_generator.py  video_utils.py  web_analysis.py
resource/: prompt.md
resources/fewshots/html_reader/: input.md  output.md
resources/prompts/: ask.md  html_reader.md  rag.md  system.md  tag.md  title.md  write.md
resources/prompts/functions/: content_extract.md
resources/tool_schema/: knowledge_search.json  web_search.json
src/common/: config_loader.py  logger.py  template_parser.py  trace_info.py
src/resources/prompt_templates/: ask.j2  base.j2  citation_format.j2  tools.j2  user_input_description.j2  write.j2
src/resources/prompts/: write.md
src/wizard/: config.py
src/wizard/api/: depends.py  entity.py  internal.py  server.py  v1.py  wizard.py
src/wizard/grimoire/: base_streamable.py  common_ai.py
src/wizard/wand/: worker.py
tests/: conftest.py  test_api.py  test_ask.py  test_by_log.py  test_common_ai.py  test_config_loader.py  test_content_extract.py  test_grimoire.py  test_minio.py  test_searxng.py  test_server.py  test_tasks.py  test_vector.py  test_worker.py  test_write.py
tests/agent/: test_stream_output_parser.py
tests/common/: test_template_parser.py
tests/function/: test_file_reader.py  test_html_reader.py  test_parse_html.py  test_single_task.py
tests/helper/: backend_client.py  chroma_container.py  fixture.py  meilisearch_container.py
tests/omnibox_wizard/: conftest.py  pytest.ini  test_ask.py  test_by_log.py  test_chunk_offsets.py  test_citation_ids.py  test_common_ai.py  test_config_loader.py  test_indexing.py  test_internal_api.py  test_searxng.py  test_server.py  test_tasks.py  test_vector.py  test_worker.py  test_worker_error_payload.py  test_write.py
tests/omnibox_wizard/agent/: test_stream_output_parser.py
tests/omnibox_wizard/common/: test_template_parser.py
tests/omnibox_wizard/function/: test_html_reader.py  test_single_task.py
tests/omnibox_wizard/functions/: test_bilibili_downloader_integration.py  test_downloader_factory.py  test_file_reader.py  test_html_reader.py  test_property_generator.py  test_single_task.py  test_tag_extractor.py  test_title_generator.py  test_video_note_generator_integration.py  test_youtube_downloader_integration.py
tests/omnibox_wizard/helper/: backend_client.py  fixture.py  get_collect_html.py  get_task_by_id.py  meilisearch_container.py
tests/resources/: input.json  result.html
tests/resources/tasks/: github.pkl  tencent_news.pkl
wizard/: config.py  entity.py  worker.py
wizard/api/: __init__.py  _api.py  depends.py  entity.py  grimoire.py  internal.py  server.py  task.py  tasks.py  v1.py  wizard.py
wizard/common/: logger.py  trace_info.py
wizard/db/: __init__.py  _db.py  entity.py
wizard/grimoire/: base_streamable.py  common_ai.py  pipeline.py  rag.py
wizard/grimoire/agent/: agent.py  (+4 more)
wizard/wand/: worker.py
wizard/worker/: __init__.py  _html_to_markdown.py  _worker.py
worker/: app.py
worker/common/: logger.py  trace_info.py
(+117 files in other folders)
