[project]
name = "omnibox-wizard"
version = "0.1.0"
description = "OmniBox Wizard"
authors = [
    { name = "Lucien Shui", email = "lucien@lucien.ink" }
]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "chromadb-client (>=1.0.7,<2.0.0)",
    "openai (>=1.78.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "markitdown[docx,pdf,pptx] (>=0.1.1,<0.2.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "readability-lxml (>=0.8.4.1,<0.9.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "meilisearch-python-sdk (>=4.6.0,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pypdf (>=5.8.0,<6.0.0)",
    "sse-starlette (>=3.0.2,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
testcontainers = "^4.10.0"
python-dotenv = "^1.1.0"
httpx-sse = "^0.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.compose.deps.meilisearch]
image = "getmeili/meilisearch:v1.14"
