[project]
name = "omnibox-wizard"
version = "0.1.4"
description = "OmniBox Wizard"
authors = [
    { name = "Lucien Shui", email = "lucien@lucien.ink" }
]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "chromadb-client (>=1.0.7,<2.0.0)",
    "openai (>=1.78.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "readability-lxml (>=0.8.4.1,<0.9.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "meilisearch-python-sdk (>=4.6.0,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pypdf (>=5.8.0,<6.0.0)",
    "sse-starlette (>=3.0.2,<4.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "opentelemetry-api (>=1.36.0,<2.0.0)",
    "opentelemetry-sdk (>=1.36.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.57b0,<0.58)",
    "opentelemetry-instrumentation-httpx (>=0.57b0,<0.58)",
    "opentelemetry-exporter-otlp (>=1.36.0,<2.0.0)",
    "python-frontmatter (>=1.1.0,<2.0.0)",
    "pymupdf (>=1.26.5,<2.0.0)",
    "htmlmin (>=0.1.12,<0.2.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "boto3 (>=1.40.64,<2.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
    "av (>=16.0.1,<17.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
testcontainers = "^4.10.0"
python-dotenv = "^1.1.0"
httpx-sse = "^0.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.compose.deps.meilisearch]
image = "getmeili/meilisearch:v1.14"
